--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ target/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+*# Ignore the Cargo.lock file in libraries
+#  This is a common practice to avoid locking the library to a specific version of its dependencies.
+#  If you are developing a library, you should not commit the Cargo.lock file.
+#  If you are developing an application, you should commit the Cargo.lock file.
+#  See https://doc.rust-lang.org/cargo/reference/manifest.html#the-lockfile for more information.
+Cargo.lock
